--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ server.port=0
 spring.devtools.restart.enabled=true
 #eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# Configuracion RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=sergey
+spring.rabbitmq.password=sergey
